# suppaftp

suppaftp/: Cargo.toml
suppaftp-cli/src/: actions.rs  main.rs
suppaftp/src/: builder.rs  command.rs  lib.rs  status.rs  types.rs
suppaftp/src/async_ftp/: mod.rs  stream.rs
suppaftp/src/builder/: asynchronous.rs
suppaftp/src/sync_ftp/: file.rs  lines.rs  mod.rs  response.rs  stream.rs
suppaftp/src/sync_ftp/test/: mod.rs
tests/: test.sh
