[package]
name = "suppaftp"
version = "5.1.0"
authors = ["Christian Visintin <christian.visintin1997@gmail.com>", "Matt McCoy <mattnenterprise@yahoo.com>"]
edition = "2021" 
documentation = "https://docs.rs/suppaftp/"
repository = "https://github.com/veeso/suppaftp"
description = "A super FTP/FTPS client library for Rust"
include = ["src/**/*", "../LICENSE-APACHE", "../LICENSE-MIT", "../README.md", "../CHANGELOG.md"]
readme = "../README.md"
license = "Apache-2.0/MIT"
keywords = ["ftp", "ftps", "network-protocol", "async"]
categories = ["asynchronous", "network-programming"]

[lib]
name = "suppaftp"
path = "src/lib.rs"

[dependencies]
chrono  = "^0.4"
lazy-regex = "^2.4"
log = "^0.4"
thiserror = "^1"

# async
async-std = { version = "^1.10", optional = true }
tokio = { version = "^1", optional = true, features=["net","time"] }
async-trait = { version = "0.1.64", optional = true }
pin-project = { version = "^1", optional = true }

# secure
native-tls = { version = "^0.2", optional = true }
rustls = { version = "^0.20", optional = true }

async-rustls = { package="async-tls", version = "^0.12", optional = true }
async-native-tls = { version = "^0.5", default-features = false, optional = true }

[dev-dependencies]
async-attributes = "1.1.2"
env_logger = "^0.10"
pretty_assertions = "^1.0.0"
rand = "^0.8.4"
serial_test = "^1.0"
webpki-roots = "0.22.5"
tokio = { version = "^1", features=["full"] }

[features]
default = [ ]

# Enable async support for suppaftp
async = ["async-trait", "pin-project"]
async-std = ["dep:async-std", "async", "async-native-tls/runtime-async-std"]
tokio = ["dep:tokio", "async", "async-native-tls/runtime-tokio"]

# Enable support for FTPS which requires native-tls (openssl is required on Linux) or RustTLS
native-tls = [ "dep:native-tls" ]
native-tls-vendored = [ "native-tls/vendored", "async-native-tls/vendored" ]
rustls = [ "dep:rustls" ]

# Enable support for async FTPS
async-native-tls = [ "dep:async-native-tls", "async" ]
async-rustls = [ "dep:async-rustls", "async" ]


# Disable logging
no-log = [ "log/max_level_off" ]

# Must be enabled whenever testing with docker containers
with-containers = []
